src/test/ui/parser/keyword-final.rs
fn main() {
    let final = (); //~ ERROR expected pattern, found reserved keyword `final`
}
